--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-python-dotenv==1.0.1
-supabase==2.3.4
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.9
-pydantic==2.6.1 
+fastapi>=0.109.2
+uvicorn>=0.27.1
+python-dotenv>=1.0.1
+supabase>=2.3.4
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.9
+pydantic>=2.6.1 
