--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@supabase/supabase-js": "^2.39.3",
+    "@tailwindcss/forms": "^0.5.7",
     "cra-template-pwa": "2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
-    "react-icons": "^4.12.0",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "tailwindcss": "^3.4.1",
-    "@tailwindcss/forms": "^0.5.7"
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
