--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "supabase": "^2.9.6",
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
