--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "supabase": "^2.9.6",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^4.0.5",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
