--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "@heroicons/react": "^2.1.1",
     "@supabase/supabase-js": "^2.39.3",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/leaflet": "1.9.6",
     "cra-template-pwa": "2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "leaflet": "1.9.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^4.12.0",
+    "react-leaflet": "4.2.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "supabase": "^2.9.6",
