--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "supabase": "^2.9.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
