--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2",
+    "heroku-cli": "^7.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "supabase": "^2.9.6",
